SERVER-22992 waiting on forked process also waits on consuming output