src/mongo/shell/shell_utils_launcher.cpp
@@ -33,13 +33,20 @@
 
 #include "mongo/shell/shell_utils_launcher.h"
 
+#include <algorithm>
+#include <array>
+#include <boost/iostreams/device/file_descriptor.hpp>
+#include <boost/iostreams/stream.hpp>
+#include <boost/iostreams/stream_buffer.hpp>
+#include <boost/iostreams/tee.hpp>
+#include <fcntl.h>
 #include <iostream>
+#include <iterator>
 #include <map>
 #include <signal.h>
 #include <vector>
 
 #ifdef _WIN32
-#include <fcntl.h>
 #include <io.h>
 #define SIGKILL 9
 #else
@@ -48,13 +55,13 @@
 #include <sys/socket.h>
 #include <sys/stat.h>
 #include <sys/wait.h>
+#include <unistd.h>
 #endif
 
 #include "mongo/client/dbclientinterface.h"
 #include "mongo/scripting/engine.h"
 #include "mongo/shell/shell_utils.h"
 #include "mongo/stdx/memory.h"
-#include "mongo/stdx/thread.h"
 #include "mongo/util/destructor_guard.h"
 #include "mongo/util/exit.h"
 #include "mongo/util/log.h"
@@ -101,6 +108,10 @@ inline int pipe(int fds[2]) {
  */
 namespace shell_utils {
 
+namespace {
+stdx::mutex _createProcessMtx;
+}  // namespace
+
 ProgramOutputMultiplexer programOutputLogger;
 
 bool ProgramRegistry::isPortRegistered(int port) const {
@@ -110,7 +121,7 @@ bool ProgramRegistry::isPortRegistered(int port) const {
 
 ProcessId ProgramRegistry::pidForPort(int port) const {
     stdx::lock_guard<stdx::recursive_mutex> lk(_mutex);
-    verify(isPortRegistered(port));
+    invariant(isPortRegistered(port));
     return _portToPidMap.find(port)->second;
 }
 
@@ -125,19 +136,34 @@ int ProgramRegistry::portForPid(ProcessId pid) const {
 
 void ProgramRegistry::registerProgram(ProcessId pid, int output, int port) {
     stdx::lock_guard<stdx::recursive_mutex> lk(_mutex);
-    verify(!isPidRegistered(pid));
+    invariant(!isPidRegistered(pid));
     _portToPidMap.emplace(port, pid);
     _outputs.emplace(pid, output);
 }
 
-void ProgramRegistry::deleteProgram(ProcessId pid) {
+void ProgramRegistry::unregisterProgram(ProcessId pid) {
     stdx::lock_guard<stdx::recursive_mutex> lk(_mutex);
-    if (!isPidRegistered(pid)) {
-        return;
+    invariant(isPidRegistered(pid));
+
+    int ret = close(_outputs[pid]);
+    if (ret != 0) {
+        const auto ewd = errnoWithDescription();
+        error() << "failed to close pipe " << _outputs.find(pid)->second << " for process "
+                << pid.toString() << " " << ewd;
     }
-    close(_outputs.find(pid)->second);
+    _outputReaderThreads[pid].join();
+
+    // Remove the PID from the registry.
     _outputs.erase(pid);
+    _outputReaderThreads.erase(pid);
     _portToPidMap.erase(portForPid(pid));
+}
+
+void ProgramRegistry::registerReaderThread(ProcessId pid, stdx::thread reader) {
+    stdx::lock_guard<stdx::recursive_mutex> lk(_mutex);
+    invariant(isPidRegistered(pid));
+    invariant(_outputReaderThreads.count(pid) == 0);
+    _outputReaderThreads.emplace(pid, std::move(reader));
 }
 
 void ProgramRegistry::getRegisteredPorts(vector<int>& ports) {
@@ -191,17 +217,15 @@ ProgramRegistry& registry = *(new ProgramRegistry());
 void ProgramOutputMultiplexer::appendLine(int port,
                                           ProcessId pid,
                                           const std::string& name,
-                                          const char* line) {
+                                          const std::string& line) {
     stdx::lock_guard<stdx::mutex> lk(mongoProgramOutputMutex);
-    uassert(28695, "program is terminating", !mongo::inShutdown());
-    stringstream buf;
-    if (port > 0)
-        buf << name << port << "| " << line;
-    else
-        buf << name << pid << "| " << line;
-    printf("%s\n", buf.str().c_str());  // cout << buf.str() << endl;
-    fflush(stdout);  // not implicit if stdout isn't directly outputting to a console.
-    _buffer << buf.str() << endl;
+    boost::iostreams::tee_device<std::ostream, std::stringstream> teeDevice(cout, _buffer);
+    boost::iostreams::stream<decltype(teeDevice)> teeStream(teeDevice);
+    if (port > 0) {
+        teeStream << name << port << "| " << line << endl;
+    } else {
+        teeStream << name << pid << "| " << line << endl;
+    }
 }
 
 string ProgramOutputMultiplexer::str() const {
@@ -333,9 +357,28 @@ void ProgramRunner::start() {
     int pipeEnds[2];
     int status = pipe(pipeEnds);
     if (status != 0) {
-        error() << "failed to create pipe: " << errnoWithDescription();
+        const auto ewd = errnoWithDescription();
+        error() << "failed to create pipe: " << ewd;
         fassertFailed(16701);
     }
+#ifndef _WIN32
+    // The calls to fcntl to set CLOEXEC ensure that processes started by the process we are about
+    // to fork do *not* inherit the file descriptors for the pipe. If grandchild processes could
+    // inherit the FD for the pipe, than the pipe wouldn't close on child process exit. On windows,
+    // instead the handle inherit flag is turned off after the call to CreateProcess.
+    status = fcntl(pipeEnds[0], F_SETFD, FD_CLOEXEC);
+    if (status != 0) {
+        const auto ewd = errnoWithDescription();
+        error() << "failed to set FD_CLOEXEC on pipe end 0: " << ewd;
+        fassertFailed(40308);
+    }
+    status = fcntl(pipeEnds[1], F_SETFD, FD_CLOEXEC);
+    if (status != 0) {
+        const auto ewd = errnoWithDescription();
+        error() << "failed to set FD_CLOEXEC on pipe end 1: " << ewd;
+        fassertFailed(40317);
+    }
+#endif
 
     fflush(0);
 
@@ -358,50 +401,17 @@ void ProgramRunner::start() {
 }
 
 void ProgramRunner::operator()() {
-    try {
-        // This assumes there aren't any 0's in the mongo program output.
-        // Hope that's ok.
-        const unsigned bufSize = 128 * 1024;
-        char buf[bufSize];
-        char temp[bufSize];
-        char* start = buf;
-        while (1) {
-            int lenToRead = (bufSize - 1) - (start - buf);
-            if (lenToRead <= 0) {
-                log() << "error: lenToRead: " << lenToRead;
-                log() << "first 300: " << string(buf, 0, 300);
-            }
-            verify(lenToRead > 0);
-            int ret = read(_pipe, (void*)start, lenToRead);
-            if (mongo::inShutdown())
-                break;
-            verify(ret != -1);
-            start[ret] = '\0';
-            if (strlen(start) != unsigned(ret))
-                programOutputLogger.appendLine(
-                    _port, _pid, _name, "WARNING: mongod wrote null bytes to output");
-            char* last = buf;
-            for (char *i = strchr(buf, '\n'); i; last = i + 1, i = strchr(last, '\n')) {
-                *i = '\0';
-                programOutputLogger.appendLine(_port, _pid, _name, last);
-            }
-            if (ret == 0) {
-                if (*last)
-                    programOutputLogger.appendLine(_port, _pid, _name, last);
-                close(_pipe);
-                break;
-            }
-            if (last != buf) {
-                strncpy(temp, last, bufSize);
-                temp[bufSize - 1] = '\0';
-                strncpy(buf, temp, bufSize);
-                buf[bufSize - 1] = '\0';
-            } else {
-                verify(strlen(buf) < bufSize);
-            }
-            start = buf + strlen(buf);
+    boost::iostreams::stream_buffer<boost::iostreams::file_descriptor_source> fdBuf(
+        _pipe, boost::iostreams::file_descriptor_flags::close_handle);
+    std::istream fdStream(&fdBuf);
+
+    std::string line;
+    while (std::getline(fdStream, line)) {
+        if (line.find('\0') != std::string::npos) {
+            programOutputLogger.appendLine(
+                _port, _pid, _name, "WARNING: mongod wrote null bytes to output");
         }
-    } catch (...) {
+        programOutputLogger.appendLine(_port, _pid, _name, line);
     }
 }
 
@@ -513,55 +523,47 @@ void ProgramRunner::launchProcess(int child_stdout) {
     }
     std::memset(lpEnvironment.get() + environmentOffset, 0, sizeof(wchar_t));
 
-    HANDLE h = (HANDLE)_get_osfhandle(child_stdout);
-    verify(h != INVALID_HANDLE_VALUE);
-    verify(SetHandleInformation(h, HANDLE_FLAG_INHERIT, 1));
+    {
+        stdx::lock_guard<stdx::mutex> lk(_createProcessMtx);
+        HANDLE h = reinterpret_cast<HANDLE>(_get_osfhandle(child_stdout));
+        invariant(h != INVALID_HANDLE_VALUE);
+        invariant(SetHandleInformation(h, HANDLE_FLAG_INHERIT, 1));
 
-    STARTUPINFO si;
-    ZeroMemory(&si, sizeof(si));
-    si.cb = sizeof(si);
-    si.hStdError = h;
-    si.hStdOutput = h;
-    si.dwFlags |= STARTF_USESTDHANDLES;
+        STARTUPINFO si;
+        ZeroMemory(&si, sizeof(si));
+        si.cb = sizeof(si);
+        si.hStdError = h;
+        si.hStdOutput = h;
+        si.dwFlags |= STARTF_USESTDHANDLES;
 
-    PROCESS_INFORMATION pi;
-    ZeroMemory(&pi, sizeof(pi));
+        PROCESS_INFORMATION pi;
+        ZeroMemory(&pi, sizeof(pi));
 
-    DWORD dwCreationFlags = 0;
-    dwCreationFlags |= CREATE_UNICODE_ENVIRONMENT;
+        DWORD dwCreationFlags = 0;
+        dwCreationFlags |= CREATE_UNICODE_ENVIRONMENT;
 
-    bool success = CreateProcessW(nullptr,
-                                  const_cast<LPWSTR>(args.c_str()),
-                                  nullptr,
-                                  nullptr,
-                                  true,
-                                  dwCreationFlags,
-                                  lpEnvironment.get(),
-                                  nullptr,
-                                  &si,
-                                  &pi) != 0;
-    if (!success) {
-        LPSTR lpMsgBuf = 0;
-        DWORD dw = GetLastError();
-        FormatMessageA(FORMAT_MESSAGE_ALLOCATE_BUFFER | FORMAT_MESSAGE_FROM_SYSTEM |
-                           FORMAT_MESSAGE_IGNORE_INSERTS,
-                       NULL,
-                       dw,
-                       MAKELANGID(LANG_NEUTRAL, SUBLANG_DEFAULT),
-                       (LPSTR)&lpMsgBuf,
-                       0,
-                       NULL);
-        stringstream ss;
-        ss << "couldn't start process " << _argv[0] << "; " << lpMsgBuf;
-        uassert(14042, ss.str(), success);
-        LocalFree(lpMsgBuf);
+        bool success = CreateProcessW(nullptr,
+                                      const_cast<LPWSTR>(args.c_str()),
+                                      nullptr,
+                                      nullptr,
+                                      true,
+                                      dwCreationFlags,
+                                      lpEnvironment.get(),
+                                      nullptr,
+                                      &si,
+                                      &pi) != 0;
+        if (!success) {
+            const auto ewd = errnoWithDescription();
+            ss << "couldn't start process " << _argv[0] << "; " << ewd;
+            uasserted(14042, ss.str());
+        }
+
+        CloseHandle(pi.hThread);
+        invariant(SetHandleInformation(h, HANDLE_FLAG_INHERIT, 0));
+
+        _pid = ProcessId::fromNative(pi.dwProcessId);
+        registry.insertHandleForPid(_pid, pi.hProcess);
     }
-
-    CloseHandle(pi.hThread);
-
-    _pid = ProcessId::fromNative(pi.dwProcessId);
-    registry.insertHandleForPid(_pid, pi.hProcess);
-
 #else
 
     std::string execErrMsg = str::stream() << "Unable to start program " << _argv[0];
@@ -583,8 +585,8 @@ void ProgramRunner::launchProcess(int child_stdout) {
 
     if (nativePid == -1) {
         // Fork failed so it is time for the process to exit
-        const auto errordesc = errnoWithDescription();
-        cout << "ProgramRunner is unable to fork child process: " << errordesc << endl;
+        const auto ewd = errnoWithDescription();
+        cout << "ProgramRunner is unable to fork child process: " << ewd << endl;
         fassert(34363, false);
     }
 
@@ -616,6 +618,8 @@ void ProgramRunner::launchProcess(int child_stdout) {
 }
 
 // returns true if process exited
+// If this function returns true, it will always call `registry.unregisterProgram(pid);`
+// If block is true, this will throw if it cannot wait for the processes to exit.
 bool wait_for_pid(ProcessId pid, bool block = true, int* exit_code = NULL) {
 #ifdef _WIN32
     verify(registry.countHandleForPid(pid));
@@ -629,23 +633,27 @@ bool wait_for_pid(ProcessId pid, bool block = true, int* exit_code = NULL) {
     if (ret == WAIT_TIMEOUT) {
         return false;
     } else if (ret != WAIT_OBJECT_0) {
-        log() << "wait_for_pid: WaitForSingleObject failed: " << errnoWithDescription();
+        const auto ewd = errnoWithDescription();
+        log() << "wait_for_pid: WaitForSingleObject failed: " << ewd;
     }
 
     DWORD tmp;
     if (GetExitCodeProcess(h, &tmp)) {
         if (tmp == STILL_ACTIVE) {
-            if (block)
-                log() << "Process is STILL_ACTIVE even after blocking";
+            uassert(
+                ErrorCodes::UnknownError, "Process is STILL_ACTIVE even after blocking", !block);
             return false;
         }
         CloseHandle(h);
         registry.eraseHandleForPid(pid);
         if (exit_code)
             *exit_code = tmp;
+
+        registry.unregisterProgram(pid);
         return true;
     } else {
-        log() << "GetExitCodeProcess failed: " << errnoWithDescription();
+        const auto ewd = errnoWithDescription();
+        log() << "GetExitCodeProcess failed: " << ewd;
         return false;
     }
 #else
@@ -663,8 +671,12 @@ bool wait_for_pid(ProcessId pid, bool block = true, int* exit_code = NULL) {
             MONGO_UNREACHABLE;
         }
     }
+    if (ret) {
+        registry.unregisterProgram(pid);
+    } else if (block) {
+        uasserted(ErrorCodes::UnknownError, "Process did not exit after blocking");
+    }
     return ret == pid.toNative();
-
 #endif
 }
 
@@ -680,8 +692,6 @@ BSONObj ClearRawMongoProgramOutput(const BSONObj& args, void* data) {
 BSONObj CheckProgram(const BSONObj& args, void* data) {
     ProcessId pid = ProcessId::fromNative(singleArg(args).numberInt());
     bool isDead = wait_for_pid(pid, false);
-    if (isDead)
-        registry.deleteProgram(pid);
     return BSON(string("") << (!isDead));
 }
 
@@ -689,7 +699,6 @@ BSONObj WaitProgram(const BSONObj& a, void* data) {
     ProcessId pid = ProcessId::fromNative(singleArg(a).numberInt());
     int exit_code = -123456;  // sentinel value
     wait_for_pid(pid, true, &exit_code);
-    registry.deleteProgram(pid);
     return BSON(string("") << exit_code);
 }
 
@@ -721,8 +730,9 @@ BSONObj StartMongoProgram(const BSONObj& a, void* data) {
 
     ProgramRunner r(args, env);
     r.start();
+    invariant(registry.isPidRegistered(r.pid()));
     stdx::thread t(r);
-    t.detach();
+    registry.registerReaderThread(r.pid(), std::move(t));
     return BSON(string("") << r.pid().asLongLong());
 }
 
@@ -730,23 +740,11 @@ BSONObj RunMongoProgram(const BSONObj& a, void* data) {
     BSONObj env{};
     ProgramRunner r(a, env);
     r.start();
+    invariant(registry.isPidRegistered(r.pid()));
     stdx::thread t(r);
-    t.detach();
+    registry.registerReaderThread(r.pid(), std::move(t));
     int exit_code = -123456;  // sentinel value
     wait_for_pid(r.pid(), true, &exit_code);
-    registry.deleteProgram(r.pid());
-    return BSON(string("") << exit_code);
-}
-
-BSONObj RunProgram(const BSONObj& a, void* data) {
-    BSONObj env{};
-    ProgramRunner r(a, env);
-    r.start();
-    stdx::thread t(r);
-    t.detach();
-    int exit_code = -123456;  // sentinel value
-    wait_for_pid(r.pid(), true, &exit_code);
-    registry.deleteProgram(r.pid());
     return BSON(string("") << exit_code);
 }
 
@@ -824,7 +822,8 @@ inline void kill_wrapper(ProcessId pid, int sig, int port, const BSONObj& opt) {
     if (event == NULL) {
         int gle = GetLastError();
         if (gle != ERROR_FILE_NOT_FOUND) {
-            warning() << "kill_wrapper OpenEvent failed: " << errnoWithDescription();
+            const auto ewd = errnoWithDescription();
+            warning() << "kill_wrapper OpenEvent failed: " << ewd;
         } else {
             log() << "kill_wrapper OpenEvent failed to open event to the process " << pid.asUInt32()
                   << ". It has likely died already or server is running an older version."
@@ -867,7 +866,8 @@ inline void kill_wrapper(ProcessId pid, int sig, int port, const BSONObj& opt) {
 
     bool result = SetEvent(event);
     if (!result) {
-        error() << "kill_wrapper SetEvent failed: " << errnoWithDescription();
+        const auto ewd = errnoWithDescription();
+        error() << "kill_wrapper SetEvent failed: " << ewd;
         return;
     }
 #else
@@ -875,7 +875,8 @@ inline void kill_wrapper(ProcessId pid, int sig, int port, const BSONObj& opt) {
     if (x) {
         if (errno == ESRCH) {
         } else {
-            log() << "killFailed: " << errnoWithDescription();
+            const auto ewd = errnoWithDescription();
+            log() << "killFailed: " << ewd;
             verify(x == 0);
         }
     }
@@ -898,17 +899,17 @@ int killDb(int port, ProcessId _pid, int signal, const BSONObj& opt) {
     kill_wrapper(pid, signal, port, opt);
 
     int exitCode = EXIT_FAILURE;
-    bool processTerminated = wait_for_pid(pid, true, &exitCode);
-    registry.deleteProgram(pid);
+    try {
+        wait_for_pid(pid, true, &exitCode);
+    } catch (...) {
+        warning() << "process " << pid << " failed to terminate.";
+        return EXIT_FAILURE;
+    }
 
     if (signal == SIGKILL) {
         sleepmillis(4000);  // allow operating system to reclaim resources
     }
 
-    if (!processTerminated) {
-        warning() << "process " << pid << " failed to terminate.";
-        return EXIT_FAILURE;
-    }
     return exitCode;
 }
 
@@ -984,8 +985,8 @@ MongoProgramScope::~MongoProgramScope() {
 
 void installShellUtilsLauncher(Scope& scope) {
     scope.injectNative("_startMongoProgram", StartMongoProgram);
-    scope.injectNative("runProgram", RunProgram);
-    scope.injectNative("run", RunProgram);
+    scope.injectNative("runProgram", RunMongoProgram);
+    scope.injectNative("run", RunMongoProgram);
     scope.injectNative("_runMongoProgram", RunMongoProgram);
     scope.injectNative("_stopMongoProgram", StopMongoProgram);
     scope.injectNative("stopMongoProgramByPid", StopMongoProgramByPid);
