src/mongo/shell/shell_utils_launcher.h
@@ -40,6 +40,7 @@
 #include "mongo/platform/process_id.h"
 #include "mongo/platform/unordered_map.h"
 #include "mongo/stdx/mutex.h"
+#include "mongo/stdx/thread.h"
 
 namespace mongo {
 
@@ -60,7 +61,7 @@ void installShellUtilsLauncher(Scope& scope);
 /** Record log lines from concurrent programs.  All public members are thread safe. */
 class ProgramOutputMultiplexer {
 public:
-    void appendLine(int port, ProcessId pid, const std::string& name, const char* line);
+    void appendLine(int port, ProcessId pid, const std::string& name, const std::string& line);
     /** @return up to 100000 characters of the most recent log output. */
     std::string str() const;
     void clear();
@@ -82,7 +83,11 @@ public:
     int portForPid(ProcessId pid) const;
     /** Register an unregistered program. */
     void registerProgram(ProcessId pid, int output, int port = 0);
-    void deleteProgram(ProcessId pid);
+    /** Registers the reader thread for the PID. Must be called before `joinReaderThread`. */
+    void registerReaderThread(ProcessId pid, stdx::thread reader);
+    /** Closes the registered program's write pipe and waits for all of the written output to be
+     * consumed by the reader thread, then removes the program from the registry */
+    void unregisterProgram(ProcessId pid);
 
     bool isPidRegistered(ProcessId pid) const;
     void getRegisteredPorts(std::vector<int>& ports);
@@ -91,6 +96,7 @@ public:
 private:
     stdx::unordered_map<int, ProcessId> _portToPidMap;
     stdx::unordered_map<ProcessId, int> _outputs;
+    stdx::unordered_map<ProcessId, stdx::thread> _outputReaderThreads;
     mutable stdx::recursive_mutex _mutex;
 
 #ifdef _WIN32
